Start to bug fix collapsing menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ h3 {
    background-image: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255, 1) 90%);
    margin: 0;
    position: relative;
+
 }
 
 #logo-home-join {
@@ -49,6 +50,7 @@ h3 {
 
 #logo-home-join {
    display: flex;
+   flex-wrap: wrap;
 }
 
 #logo-home-join a:link {
@@ -742,7 +744,7 @@ input[type=number] {
    border-radius: 5px;
 }
 
-input[type=submit] {
+#submit-button {
    background-color: #04AA6D;
    color: white;
    padding: 12px 20px;
@@ -752,7 +754,7 @@ input[type=submit] {
    float: right;
  }
  
- input[type=submit]:hover {
+ #submit-button:hover {
    background-color: #45a049;
  }
 
@@ -988,13 +990,14 @@ input[type=submit] {
 
    .menu-box {
       width: 170px;
-      margin-left: -170px;
+      margin-left: -70px;
       margin-top: -40px;
       position: relative;
       padding: 20px;
       align-items: center;
       background-color: #f2f2f2;
       transition: all 1s ease;
+      
     }
     
     .menu-box li {
